--- a/GEDELOK/GEDELOK.vcxproj.filters
+++ b/GEDELOK/GEDELOK.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="MySceneManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ParticleBeat.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ogre3d.cpp">
@@ -39,6 +42,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MySceneManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="ParticleBeat.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
