--- a/GEDELOK/GEDELOK.vcxproj.filters
+++ b/GEDELOK/GEDELOK.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClInclude Include="Object.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MyLight.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Ogre3d.cpp">
@@ -57,6 +60,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Object.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MyLight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
