--- a/GEDELOK/GEDELOK.vcxproj
+++ b/GEDELOK/GEDELOK.vcxproj
@@ -89,6 +89,7 @@
     <ClInclude Include="MyFrameListener.h" />
     <ClInclude Include="MySceneManager.h" />
     <ClInclude Include="Object.h" />
+    <ClInclude Include="Observer.h" />
     <ClInclude Include="ParticleBeat.h" />
     <ClInclude Include="SongAnalyser.h" />
     <ClInclude Include="stdafx.h" />
@@ -97,6 +98,7 @@
     <ClCompile Include="MyLight.cpp" />
     <ClCompile Include="MyFrameListener.cpp" />
     <ClCompile Include="Object.cpp" />
+    <ClCompile Include="Observer.cpp" />
     <ClCompile Include="ParticleBeat.cpp" />
     <ClCompile Include="Ogre3d.cpp" />
     <ClCompile Include="MySceneManager.cpp" />
