--- a/LabFiles/OgreConfig/resources_d.cfg
+++ b/LabFiles/OgreConfig/resources_d.cfg
@@ -42,3 +42,4 @@ FileSystem=C:\Users\Kelvin\OgreSDK_vc11_v1-9-0/Tests/Media
 
 FileSystem=../LabFiles/Materials
 FileSystem=../LabFiles/ParticleSystems
+FileSystem=../LabFiles/Models
