--- a/GEDELOK/ogre.cfg
+++ b/GEDELOK/ogre.cfg
@@ -11,7 +11,7 @@ Multi device memory hint=Use minimum system memory
 Rendering Device=Monitor-1-Intel(R) HD Graphics 5500
 Resource Creation Policy=Create on all devices
 Use Multihead=Auto
-VSync=No
+VSync=Yes
 VSync Interval=1
 Video Mode=800 x 600 @ 32-bit colour
 sRGB Gamma Conversion=No
