remove songs and fix balls

--- a/GEDELOK/ogre.cfg
+++ b/GEDELOK/ogre.cfg
@@ -6,7 +6,7 @@ Allow NVPerfHUD=No
 FSAA=0
 Fixed Pipeline Enabled=Yes
 Floating-point mode=Fastest
-Full Screen=No
+Full Screen=Yes
 Multi device memory hint=Auto hardware buffers management
 Rendering Device=Monitor-1-Intel(R) HD Graphics 5500
 Resource Creation Policy=Create on all devices
